cluster/workerbee/workerbee/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: workerbee
    part-of: dev
    project: workerbee
    confidentiality: not-defined
    compliance: not-defined
  name: workerbee
  namespace: workerbee
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: workerbee
  template:
    metadata:
      labels:
        app: workerbee
        component: workerbee
        part-of: dev
        project: workerbee
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: gitlab-deploy-key-workerbee
      containers:
        - name: webserver
          image: registry.login.no/tekkom/dev/workerbee:2.0.2-dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nginx
              topologyKey: kubernetes.io/hostname
