cluster/workerbee/workerbee/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workerbee
  namespace: workerbee
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - dev.workerbee.login.no
  rules:
    - host: dev.workerbee.login.no
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: workerbee
                port:
                  number: 8080
